# mutash

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: operators.md
examples/: README.md  deploy.sh
examples/tests/: deploy.bats  run.sh
scripts/: smoke.sh
src/: cli.rs  json.rs  lexer.rs  lib.rs  main.rs  mutant.rs  mutators.rs  report.rs  runner.rs  sandbox.rs
tests/: cli.rs
